--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "./node_modules/.bin/concurrently \"cd ./node_modules/swapi-json-server && node app.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "review": "atom . && npm install && npm start"
   }
 }
